--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.14.3</version>
+            <version>7.6.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -259,6 +259,27 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+
+                    <!-- Configure the Code coverage plugin -->
+                    <plugin>
+                      <groupId>org.jacoco</groupId>
+                      <artifactId>jacoco-maven-plugin</artifactId>
+                      <version>0.8.8</version>
+                      <executions>
+                        <execution>
+                          <goals>
+                            <goal>prepare-agent</goal>
+                          </goals>
+                        </execution>
+                        <execution>
+                          <id>generate-code-coverage-report</id>
+                          <phase>test</phase>
+                          <goals>
+                            <goal>report</goal>
+                          </goals>
+                        </execution>
+                      </executions>
                     </plugin>
                 </plugins>
             </build>
