Update the dependencies
Update the libraries used to build.  The new version of SpotBugs noticed
that we could throw from a constructor of DelayOp.  Instead of preserving
the old behavior, it will now bound the delay values and log an error.

The library version was updated to 1.2.0 to reflect that API change.

--- a/test-operations/pom.xml
+++ b/test-operations/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.vmware.test-operations</groupId>
     <artifactId>test-operations-parent</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
   </parent>
   <artifactId>test-operations</artifactId>
   <!--
@@ -67,6 +67,11 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+      <version>4.7.3</version>
     </dependency>
   </dependencies>
 
