--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.22.1</version>
             <scope>test</scope>
         </dependency>
@@ -265,7 +265,7 @@
                     <plugin>
                       <groupId>org.jacoco</groupId>
                       <artifactId>jacoco-maven-plugin</artifactId>
-                      <version>0.8.8</version>
+                      <version>0.8.11</version>
                       <executions>
                         <execution>
                           <goals>
