--- a/test-utilities/pom.xml
+++ b/test-utilities/pom.xml
@@ -4,7 +4,7 @@
     <parent>
       <groupId>com.vmware.test-operations</groupId>
       <artifactId>test-operations-parent</artifactId>
-      <version>1.2.1-SNAPSHOT</version>
+      <version>1.2.1</version>
     </parent>
     <artifactId>test-utilities</artifactId>
 
